# Game-C

./: CMakeLists.txt
FlappyBird/: CMakeLists.txt
Game/: CMakeLists.txt
Game/include/: Platform.h  Player.h
Game/src/: Platform.cpp  Player.cpp  main.cpp
PieroEngine/: CMakeLists.txt
PieroEngine/include/: PieroEngine.h
PieroEngine/include/Core/ECS/: ECSManager.h  GameObject.h
PieroEngine/include/Core/ECS/Component/: RigidBody2D.h
PieroEngine/include/Core/Input/: Input.h
PieroEngine/include/Core/Texture/: Texture.h  TextureManager.h
PieroEngine/include/Core/Window/: Window.h
PieroEngine/include/Helper/: helper.h
PieroEngine/include/Math/: Vector2D.h
PieroEngine/src/: PieroEngine.cpp
PieroEngine/src/Core/ECS/: GameObject.cpp
PieroEngine/src/Core/Input/: Input.cpp
PieroEngine/src/Core/Texture/: Texture.cpp
PieroEngine/src/Core/Window/: Window.cpp
PieroEngine/src/Helper/: helper.cpp
PieroEngine/src/Math/: Vector2D.cpp
Snake/: CMakeLists.txt
Snake/include/: Food.h  Snake.h
Snake/src/: main.cpp
Test/: CMakeLists.txt  Main.cs
Test/include/: TestApp.h
Test/src/: main.cpp
